add splashbox Placeholer in feature.html

--- a/tutorial-project/mysite/templates/base.html
+++ b/tutorial-project/mysite/templates/base.html
@@ -28,6 +28,7 @@
                 </div>
             </div>
             {% block content %}{% endblock content %}
+            <!-- inherit this base.html, and add your own content in these label. -->
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
