--- a/tutorial-project/mysite/templates/feature.html
+++ b/tutorial-project/mysite/templates/feature.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
+
 {% load cms_tags %}
+<!-- cms_tags is the required template tag library -->
 
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
@@ -9,5 +11,8 @@
     </div>
     <div>
         {% placeholder "content" %}
+    </div>
+    <div>
+    	{% placeholder "splashbox" %}
     </div>
 {% endblock content %}
