--- a/tutorial-project/mysite/templates/base.html
+++ b/tutorial-project/mysite/templates/base.html
@@ -33,5 +33,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
         {% render_block "js" %}
+
+        <!-- add global footer -->
+        <footer>
+            {% static_placeholder 'footer' %}
+        </footer>
     </body>
 </html>
