use show_menu tag in this template.

--- a/tutorial-project/mysite/templates/base.html
+++ b/tutorial-project/mysite/templates/base.html
@@ -24,6 +24,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         {% show_menu 0 1 100 100 "menu.html" %}
+                        <!-- must load menu_tags library to use show_menu -->
                     </ul>
                 </div>
             </div>
