--- a/tutorial-project/mysite/templates/menu.html
+++ b/tutorial-project/mysite/templates/menu.html
@@ -1,4 +1,5 @@
 {% load i18n menu_tags cache %}
+<!-- menu_tags already contains a version that uses bootstrap compatible markup. -->
 
 {% for child in children %}
     <li class="{% if child.ancestor %}ancestor{% endif %}
